2013-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customization Variables for Program Behavior)
	[TEXINFOSXML]: new output format.

2013-01-16  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/TexinfoXML.pm: replace tp/Texinfo/Convert/XML.pm.

2013-01-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Marking Text): remaining node names needing @t.

2013-01-15  Karl Berry  <karl@gnu.org>

	* po_document/LINGUAS: es.us-ascii is back, paperwork executed
	by Francisco Vila <paconet.org@gmail.com>.

	* doc/texinfo.txi: use @t instead of @code in node names,
	to avoid extraneous quotes.

2013-01-15  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh: adapt to shorter regenerate_docstr.sh 
	and Makefile.docstr names.

2013-01-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Conditionally Visible Text,
	Defining New Texinfo Commands,
	Formatting and Printing Hardcopy,
	Creating an Info File): node names with @.
	Fix more xrefs for new names.

2013-01-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Special Insertions, Breaks, deffnx,
	documentencoding): node names with @, restructure.

	* po_document/LINGUAS (ja, es.us-ascii): remove.
	* tp/maintain/regenerate_docstr.sh: shorten name of
	regenerate_document_strings_make_rules.sh.
	* tp/Makefile.docstr: shorten name of generated file, too.
	* tp/Makefile.am: renames.

2013-01-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Internationalization of Document Strings):
	small changes.

2013-01-11  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_PREREQ): remove, better to rely on
	AM_INIT_AUTOMAKE's implicit prereq.
	Suggestion from Stefano, 11 Jan 2013 12:12:53.

	* tp/tests/Makefile.am (long-check, all-check, tex-html-check):
	aliases for the names with s.

2013-01-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/window.c (calculate_line_starts): call window_line_map_init,
	19 Dec 2012 14:10:30 +0200

2013-01-08  Patrice Dumas  <pertusus@free.fr>
